--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,7 +2,7 @@
   display: flex;
   border-radius: var(--mantine-radius-md);
   border: 1px solid var(--mantine-color-gray-4);
-  height: 100px;
+  height: 120px;
   overflow: hidden;
   justify-content: space-between;
   margin: 20px 0;
@@ -14,14 +14,13 @@
 }
 
 .ogImg {
-  width: auto;
-  height: 100%;
-  max-height: 120px;
+  max-width: 200px;
+  height: 120px;
   margin: 0;
 }
 
 .ogpContainer {
-  width: calc(100% - 100px);
+  min-width: 0;
   flex: 1;
   padding: 8px 12px;
 }
@@ -34,9 +33,6 @@
   font-size: var(--mantine-h4-font-size);
   line-height: var(--mantine-h4-line-height);
   margin: 0 0 8px;
-  /* white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis; */
   color: var(--mantine-color-black);
 }
 
